--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </section>
         <section>
             <h2>Plan Your Trip</h2>
-            <section id="getThere">
+            <section>
                 <h3>How to Get There</h3>
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plane" width="150" height="150" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
